--- a/index.html
+++ b/index.html
@@ -43,17 +43,18 @@
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
   <hgroup>
-    <h2>The Real MLB Strike Zone</h2>
+    <h2>The MLB STRIKE ZONE</h2>
   </hgroup>
   <article data-timings="">
     <ul>
-<li><p>Question: does the real Major League Baseball STRIKE ZONE, as called by umpires, conform to the MLB Rulebook&#39;s definition?</p>
+<li><p>Question:</p>
 
 <ul>
+<li>Does the real Major League Baseball STRIKE ZONE, as called by umpires, conform to the MLB Rulebook&#39;s definition?</li>
 <li>If not, what are the true shape and dimensions of the strike zone?</li>
 </ul></li>
 <li><p>Major League Baseball Rulebook, Rule 2.00, The STRIKE ZONE<br>
-<a href="http://mlb.mlb.com/mlb/official_info/umpires/rules_interest.jsp">http://mlb.mlb.com/mlb/official_info/umpires/rules_interest.jsp</a>:</p>
+(<a href="http://mlb.mlb.com/mlb/official_info/umpires/rules_interest.jsp">http://mlb.mlb.com/mlb/official_info/umpires/rules_interest.jsp</a>):</p>
 
 <ul>
 <li>&quot;The STRIKE ZONE is that area over home plate the upper limit of which is a horizontal line at the midpoint between the top of the shoulders and the top of the uniform pants, and the lower level is a line at the hollow beneath the kneecap. The Strike Zone shall be determined from the batter&#39;s stance as the batter is prepared to swing at a pitched ball.&quot;</li>
@@ -77,13 +78,12 @@
 </ol>
 
 <ul>
-<li><p>The data are from the publicly-available PitchFX database.</p></li>
-<li><p>Options</p>
+<li>Options
 
 <ul>
-<li>The drop down menu allows the user to analyze any of a selection of MLB pitchers.</li>
+<li>The drop down menu allows the user to analyze a selection of MLB pitchers.</li>
 <li>You can toggle the rulebook-defined strike zone.</li>
-<li>You can adjust the bounds of the x- and y-axes.</li>
+<li>You can adjust the bounds of the x- and y-axes to zoom.</li>
 </ul></li>
 </ul>
 
@@ -99,10 +99,10 @@
     
 <div style='float:left;width:48%;' class='centered'>
   <ul>
-<li><p>The dotted black line represents the MLB Rulebook definition of the strike zone.</p></li>
-<li><p>The orange contour lines represent increasing densities of called strikes. </p></li>
-<li><p>The &quot;dodger blue&quot; contour lines indicate increasing densities of balls. </p></li>
-<li><p>Each densitiy is emphasized by the background coloring of the plot.</p></li>
+<li><p>The dotted black line is an approximation of the MLB Rulebook definition of the STRIKE ZONE.</p></li>
+<li><p>The <orange> contour lines represent increasing densities of called strikes. </p></li>
+<li><p>The <dodger blue> contour lines denote increasing densities of called balls. </p></li>
+<li><p>The background coloring of the plot emphasizes each density.</p></li>
 </ul>
 
 </div>
@@ -122,9 +122,13 @@
     
 <div style='float:left;width:48%;' class='centered'>
   <ul>
-<li><p>Again, the dotted black line represents the MLB Rulebook definition of the strike zone.</p></li>
+<li><p>Again, the dotted black line is an approximation of the MLB Rulebook definition of the STRIKE ZONE.</p></li>
 <li><p>Each color band represents a different probability that a pitch in a specific location will be called a strike.</p></li>
-<li><p>The boundary between the green and blue bands forms the shape of the modeled strike zone. At this boundary, there is a 50/50 chance of the pitch being called a strike or ball.</p></li>
+<li><p>The boundary between the green and light blue bands forms the shape of the modeled STRIKE ZONE. </p>
+
+<ul>
+<li>At this decision boundary, there is a 50/50 chance of the pitch being called a ball or strike.</li>
+</ul></li>
 </ul>
 
 </div>
@@ -142,7 +146,7 @@
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='The Real MLB Strike Zone'>
+        data-slide=1 title='The MLB STRIKE ZONE'>
          1
       </a>
     </li>
